--- a/employees/templates/register.html
+++ b/employees/templates/register.html
@@ -42,7 +42,9 @@
         </div>
         <div id="help_username" class="text-xxs mt-0 p-0 hidden_text">
             <ul>
-                <li>Required. Letters, digits and @/./+/-/_ only.</li>
+                <li>Username, or alternatively your Email, is used for Log In purpose. Is required and can contain
+                    letters, digits and @/./+/-/_ only.
+                </li>
             </ul>
         </div>
         {% if form.username.errors %}
