--- a/interactions/templates/view_slides_list.html
+++ b/interactions/templates/view_slides_list.html
@@ -29,13 +29,28 @@
 <div class="row">
     <div class="col-12">
         <div class="card mb-4">
+                <div class="d-flex px-4 py-2 border-bottom border-secondary">
+                    <div class="w-50">
+                        <strong>Category</strong>
+                    </div>
+                    <div class="w-50">
+                        <strong>Status</strong>
+                    </div>
+                </div>
             <div class="card-body px-0 pt-0 pb-0">
                 <div class="list-group list-group-flush">
                     {% for category, pdfs in pdfs_by_category.items %}
                         {% with all_completed=all_completed_categories|get_item:category %}
                         <div class="list-group-item {% if all_completed %}bg-success{% endif %}">
-                            <a data-bs-toggle="collapse" href="#pdfList_{{ forloop.counter }}" class="d-flex align-items-center">
-                                <h6 class="mb-0 mx-2 responsive__mobile-3">{{ category }}</h6>
+                            <a data-bs-toggle="collapse" href="#pdfList_{{ forloop.counter }}" class="d-flex align-items-center ">
+                                <div class="d-flex align-items-center w-45">
+                                    <h6 class="mb-0 mx-2 responsive__mobile-3">{{ category }}</h6>
+                                </div>
+                                <div class="status-column" style="margin-left: 35px">
+                                    <span class="text-dark">
+                                        {{ completion_percentages|get_item:category|default:0|floatformat:0 }}%
+                                    </span>
+                                </div>
                             </a>
                             <div id="pdfList_{{ forloop.counter }}" class="collapse" data-bs-parent="#accordion">
                                 <div class="list-group list-group-flush">
@@ -43,6 +58,13 @@
                                         <div class="list-group-item d-flex justify-content-between align-items-center {% if pdf.id in completed_pdfs %}bg-success rounded{% endif %}">
                                             <div class="d-flex flex-column">
                                                 <h6 class="text-sm mb-0">{{ pdf.name }}</h6>
+                                            </div>
+                                            <div class="status-column" style="margin-left: 30px">
+                                                {% if pdf.id in completed_pdfs %}
+                                                    <span class="text-dark">Completed</span>
+                                                {% else %}
+                                                    <span class="text-muted">Pending</span>
+                                                {% endif %}
                                             </div>
                                             <a href="{% url 'view_slides' pdf.id %}" class="btn mb-0 py-2 px-4 btn-secondary">Learn</a>
                                         </div>
@@ -73,6 +95,9 @@
     }
     .list-group-item-action:hover {
         text-decoration: none;
+    }
+    .list-group-flush {
+        border-radius: 1rem !important;
     }
 </style>
 
