--- a/interactions/templates/view_slides_list.html
+++ b/interactions/templates/view_slides_list.html
@@ -30,10 +30,10 @@
     <div class="col-12">
         <div class="card mb-4">
                 <div class="d-flex px-4 py-2 border-bottom border-secondary">
-                    <div class="w-50">
+                    <div class="text-secondary text-uppercase text-xxs w-50">
                         <strong>Category</strong>
                     </div>
-                    <div class="w-50">
+                    <div class="text-secondary text-uppercase text-xxs w-50">
                         <strong>Status</strong>
                     </div>
                 </div>
@@ -43,10 +43,10 @@
                         {% with all_completed=all_completed_categories|get_item:category %}
                         <div class="list-group-item {% if all_completed %}bg-success{% endif %}">
                             <a data-bs-toggle="collapse" href="#pdfList_{{ forloop.counter }}" class="d-flex align-items-center ">
-                                <div class="d-flex align-items-center w-45">
+                                <div class="d-flex align-items-center w-50">
                                     <h6 class="mb-0 mx-2 responsive__mobile-3">{{ category }}</h6>
                                 </div>
-                                <div class="status-column" style="margin-left: 40px">
+                                <div class="status-column">
                                     <span class="text-dark">
                                         {{ completion_percentages|get_item:category|default:0|floatformat:0 }}%
                                     </span>
@@ -57,16 +57,23 @@
                                     {% for pdf in pdfs %}
                                         <div class="list-group-item d-flex justify-content-between align-items-center {% if pdf.id in completed_pdfs %}bg-success rounded{% endif %}">
                                             <div class="d-flex flex-column">
-                                                <h6 class="text-sm mb-0">{{ pdf.name }}</h6>
+                                                <h6 class="text-xs mb-0">{{ pdf.name }}</h6>
                                             </div>
                                             <div class="status-column" style="margin-left: 18px">
                                                 {% if pdf.id in completed_pdfs %}
-                                                    <span class="text-dark">Completed</span>
+                                                    <span class="text-dark text-xs">Completed</span>
                                                 {% else %}
-                                                    <span class="text-muted">Pending</span>
+                                                    <span class="text-muted text-xs">Pending</span>
                                                 {% endif %}
                                             </div>
-                                            <a href="{% url 'view_slides' pdf.id %}" class="btn mb-0 py-2 px-4 btn-secondary">Learn</a>
+                                            <a href="{% url 'view_slides' pdf.id %}" class="btn mb-0 py-0 px-2 text-xs btn-secondary " style="text-transform: none; !important; text-wrap: nowrap; ">
+                                                <div class="py-1" style="border-right: 1px solid rgba(39,48,72,0.3)">
+                                                    <span style="margin-right: 5px; ">Learn</span>
+                                                </div>
+                                                <div class="py-1">
+                                                    <span style="margin-left: 4px">-></span>
+                                                </div>
+                                            </a>
                                         </div>
                                     {% endfor %}
                                 </div>
